[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "texnomagic"
dynamic = ["version"]
description = "TexnoMagic module for digital Magic"
readme = "README.md"
license = "MIT"
authors = [
    { name = "texnoforge", email = "voice@texnoforge.dev" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click",
    "parsimonious",
    "pyyaml",
    "requests",
    "rich",
    "scikit-learn",
    "toml",
]

[project.scripts]
texnomagic = "texnomagic.cli:main"

[project.urls]
"Bug Tracker" = "https://github.com/texnoforge/texnomagic/issues"
Docs = "https://texnoforge.github.io/texnomagic"
Homepage = "https://github.com/texnoforge/texnomagic/"

[tool.hatch.version]
path = "texnomagic/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/texnomagic",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E501"]
