[metadata]
name = texnomagic
author = texnoforge
author_email = voice@texnoforge.dev
description = TexnoMagic module for digital Magic
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/texnoforge/texnomagic/
project_urls =
    Bug Tracker = https://github.com/texnoforge/texnomagic/issues
    Docs = https://texnoforge.github.io/texnomagic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    click
    jsonrpcserver >= 5
    scikit-learn
    parsimonious

[options.entry_points]
console_scripts =
    texnomagic = texnomagic.cli:main
